--- a/index.html
+++ b/index.html
@@ -6,11 +6,145 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Kawura Landing-page</title>
+   <link rel="stylesheet" href="./Assets/css/style.css">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-   <h1> hello kawura</h1>
+   <!-- section one -->
+   <div class="container-fluid header">
+      <nav class="navbar custom-nav">
+         <a class="navbar-brand" href="#">
+           <img src="./Assets/Images/kawura-logo.png" class="logo-img" alt="kawura">
+         </a>
+         <div class="nav-btn">
+            <button class="btn btn-sign-in" type="button">
+               <a href="#">Sign in to kawura</a>
+            </button>
+            <button class="btn btn-sign-up" type="button">
+               <a href="#">Sign up on kawura</a>
+            </button>
+         </div>
+       </nav>
+       <header class="header-layout">
+         <div class="row">
+            <div class="col-sm-6 col-md-6 py-3 row-space">
+              <h2 class="py-3 header-text">
+               Deliver and Receive Live <br>
+               Classes at ease
+              </h2>
+              <p class="header-sub-text">
+               Kawura connects value-driven instructors and individuals 
+               for lives courses or webinars held across mediums like whatsapp, 
+               zoom, Facebook, google classroom.
+              </p>
+              <div class="header-btn">
+               <button class="btn btn-create" type="button">
+                  <a href="#">Create a class</a>
+               </button>
+               <button class="btn btn-enroll" type="button">
+                  <a href="#">Enroll for a class</a>
+               </button>
+            </div>
+            </div>
+            <div class="col-sm-6 col-md-6 text-center">
+               <div class="col-sm-3 col-md-3 logo-box">
+                  <div class="img-logo-box"></div>
+               </div>
+            </div>
+          </div>
+       </header>
+    </div>
+    <div class="section-one">
+       <div class="section-head">
+         <h2 class="section-title text-center" id="line-img">
+            All you need is a developed value, 
+            <br> we handle the rest
+         </h2>
+       </div>
+       <div class=" row section-content">
+          <div class="col-sm-3 col-md-2 class-box">
+             <p class="box-text">The class you want to deliver</p>
+          </div>
+          <div class="col-sm-3 col-md-2 logo-box">
+             <div class="img-logo-box"></div>
+          </div>
+          <div class="col-sm-3 col-md-3 stage-chart">
+             <div class="stage1 bar">
+                <p class="stage-text">Class Organization</p>
+             </div>
+             <div class="stage2 bar">
+               <p class="stage-text">Payment Management</p>
+            </div>
+            <div class="stage3 bar">
+               <p class="stage-text">Course Design</p>
+            </div>
+            <div class="stage4 bar">
+               <p class="stage-text">Marketing</p>
+            </div>
+            <div class="stage5 bar">
+               <p class="stage-text">issurance of Attested Certificate</p>
+            </div>
+          </div> 
+       </div>
+       <div class="click-btn text-center">
+         <button class="btn btn-create-now " type="button">
+            <a href="#">Create a class</a>
+         </button>
+       </div>
+       
+    </div>
+    <div class="section-two">
+       <div class="row peace">
+          <div class="col-md-6">
+             100%
+          </div>
+          <div class="col-md-6">
+             <div class="content-header">
+                <h2>Recieving value has never been easier</h2>
+             </div>
+             <div class="content">
+                <div class="content-title">
+                   <h4>Create Account</h4>
+                </div>
+                <div class="content-text">
+                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                      Ea tenetur quae explicabo laborum libero sed tempore quasi minus quidem cupiditate.</p>
+                </div>
+                <div class="content-title">
+                  <h4>Create Account</h4>
+               </div>
+               <div class="content-text">
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                     Ea tenetur quae explicabo laborum libero sed tempore quasi minus quidem cupiditate.</p>
+               </div>
+               <div class="content-title">
+                  <h4>Create Account</h4>
+               </div>
+               <div class="content-text">
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                     Ea tenetur quae explicabo laborum libero sed tempore quasi minus quidem cupiditate.</p>
+               </div>
+               <div class="content-title">
+                  <h4>Create Account</h4>
+               </div>
+               <div class="content-text">
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                     Ea tenetur quae explicabo laborum libero sed tempore quasi minus quidem cupiditate.</p>
+               </div>
+             </div>
+             <div class="click-btn text-left">
+               <button class="btn btn-create-now " type="button">
+                  <a href="#">Create a class</a>
+               </button>
+             </div>
+          </div>
+       </div>
 
+    </div>
+    <div class="section-three"></div>
+    <div class="section-four"></div>
+    <footer></footer>
+    
 
    <!-- javascript base -->
    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
