partially responsive on mobile

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
        <div class="section-head">
          <h2 class="section-title text-center" id="line-img">
             All you need is a developed value, 
-            <br> we handle the rest
+            <br> we handle the rest.
          </h2>
        </div>
        <div class=" row section-content">
