side-bar control

--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
                <a href="#">Sign up on kawura</a>
             </button>
          </div>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <div class="navbar-icon"></div>
+            <div class="navbar-icon"></div>
+            <div class="navbar-icon"></div>
+            </span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a href="#">Sign in to kawura</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#">Sign up on kawura</a>
+              </li>   
+            </ul>
+          </div>  
        </nav>
        <header class="header-layout">
          <div class="row">
@@ -38,13 +54,14 @@
                zoom, Facebook, google classroom.
               </p>
               <div class="header-btn">
-               <button class="btn btn-create" type="button">
-                  <a href="#">Create a class</a>
-               </button>
-               <button class="btn btn-enroll" type="button">
-                  <a href="#">Enroll for a class</a>
-               </button>
-            </div>
+                  <button class="btn btn-create" type="button">
+                     <a href="#">Create a class</a>
+                  </button>
+                  <button class="btn btn-enroll" type="button">
+                     <a href="#">Enroll for a class</a>
+                  </button>
+               </div>
+               
             </div>
             <div class="col-sm-6 col-md-6 text-center">
                <div class="col-sm-3 col-md-3 logo-box">
