--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div class="section-one">
        <div class="section-head">
-         <h2 class="section-title text-center" id="line-img">
+         <h2 class="section-title" id="line-img">
             All you need is a developed value, 
             <br> we handle the rest.
          </h2>
