--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
              100%
           </div>
           <div class="col-md-6">
-             <div class="content-header">
-                <h2>Recieving value has never been 
+              <div>
+               <h2  class="content-header">Recieving value has never been 
                    <br>easier
                </h2>
              </div>
@@ -198,7 +198,7 @@
        </div>
     </div>
     <footer>
-       <p class="text-center py-3">@copyright 2020 by kawura team</p>
+       <p class="text-center py-3 footer-text">@copyright 2020 by kawura team</p>
     </footer>
     
 
