--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-   <!-- section one -->
-   <div class="container-fluid header">
+   
+    <div class="container-fluid header">
       <nav class="navbar custom-nav">
          <a class="navbar-brand" href="#">
            <img src="./Assets/Images/kawura-logo.png" class="logo-img" alt="kawura">
@@ -61,16 +61,24 @@
                      <a href="#">Enroll for a class</a>
                   </button>
                </div>
-               
             </div>
             <div class="col-sm-6 col-md-6 text-center">
-               <div class="col-sm-3 col-md-3 logo-box">
+               <div class="col-sm-3 col-md-3 logo-box-header">
                   <div class="img-logo-box"></div>
+                  <div class="img1"></div>
+                  <div class="img2"></div>
+                  <div class="img3"></div>
+                  <div class="img4"></div>
+                  <div class="img5"></div>
+                  <div class="img6"></div>
+                  <div class="img7"></div>
+                  <div class="img8"></div>
                </div>
             </div>
           </div>
        </header>
     </div>
+    <!-- section one -->
     <div class="section-one">
        <div class="section-head">
          <h2 class="section-title" id="line-img">
@@ -108,7 +116,7 @@
             <a href="#">Create a class</a>
          </button>
        </div>
-    </div>
+      </div>
     <div class="section-two">
        <div class="row">
           <div class="col-md-6">
