--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <div class="row">
             <div class="col-sm-6 col-md-6 py-3 row-space">
               <h2 class="py-3 header-text">
-               Deliver and Receive Live <br>
+               <span class="header-color">Deliver</span> and <span class="header-color">Receive</span> Live <br>
                Classes at ease
               </h2>
               <p class="header-sub-text">
@@ -120,7 +120,7 @@
     <div class="section-two">
        <div class="row">
           <div class="col-md-6">
-             100%
+             
           </div>
           <div class="col-md-6">
               <div>
