--- a/index.html
+++ b/index.html
@@ -63,17 +63,21 @@
                </div>
             </div>
             <div class="col-sm-6 col-md-6 text-center">
-               <div class="col-sm-3 col-md-3 logo-box-header">
-                  <div class="img-logo-box"></div>
-                  <div class="img1"></div>
-                  <div class="img2"></div>
-                  <div class="img3"></div>
-                  <div class="img4"></div>
-                  <div class="img5"></div>
-                  <div class="img6"></div>
-                  <div class="img7"></div>
-                  <div class="img8"></div>
+               <div class="round-cont">
+                  <img src="./Assets/Images/Ellipse 10.png" alt="one">
+                  <img src="./Assets/Images/Ellipse 11.png" alt="two">
+                  <img src="./Assets/Images/Ellipse 12.png" alt="three">
+                  <img src="./Assets/Images/Ellipse 9.png" alt="four">
+                  <img src="./Assets/Images/Ellipse 13.png" alt="five">
+                  <img src="./Assets/Images/Ellipse 14.png" alt="six">
+                  <img src="./Assets/Images/Ellipse 15.png" alt="seven">
+                  <img src="./Assets/Images/Ellipse 8.png" alt="eight">
+                 
+                  <div class=" logo-box-header">
+                     <div class="img-logo-box"></div>     
+                  </div>
                </div>
+  
             </div>
           </div>
        </header>
