--- a/index.html
+++ b/index.html
@@ -62,22 +62,7 @@
                   </button>
                </div>
             </div>
-            <div class="col-sm-6 col-md-6 text-center">
-               <div class="round-cont">
-                  <img src="./Assets/Images/Ellipse 10.png" alt="one">
-                  <img src="./Assets/Images/Ellipse 11.png" alt="two">
-                  <img src="./Assets/Images/Ellipse 12.png" alt="three">
-                  <img src="./Assets/Images/Ellipse 9.png" alt="four">
-                  <img src="./Assets/Images/Ellipse 13.png" alt="five">
-                  <img src="./Assets/Images/Ellipse 14.png" alt="six">
-                  <img src="./Assets/Images/Ellipse 15.png" alt="seven">
-                  <img src="./Assets/Images/Ellipse 8.png" alt="eight">
-                 
-                  <div class=" logo-box-header">
-                     <div class="img-logo-box"></div>     
-                  </div>
-               </div>
-  
+            <div class="col-sm-6 col-md-6 text-center header-img">
             </div>
           </div>
        </header>
