--- a/sign-up.html
+++ b/sign-up.html
@@ -21,8 +21,16 @@
                <input type="text" class="form-control" placeholder="First name">
                <input type="text" class="form-control" placeholder="Email">
                <input type="text" class="form-control" placeholder="password">
-               <button type="submit" class="btn btn-primary">Sign in</button>
+               <button type="submit" class="btn btn-primary">Sign Up</button>
             </form>
+            <p>Already have an account? <span>Sign In</span></p>
+            <div>
+               <p>or</p>
+            </div>
+            <div class="btn">
+               <button class="google"></button>
+               <button class="facebook"></button>
+            </div>
          </div>
    </div>
 
