--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
    <link rel="stylesheet" href="./Assets/css/style.css">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-<body>
-   
+<body> 
     <div class="container-fluid header">
        <nav class="navbar custom-nav">
          <a class="navbar-brand" href="#">
@@ -18,10 +17,10 @@
          </a>
          <div class="nav-btn">
             <button class="btn btn-sign-in" type="button">
-               <a href="#">Sign in to kawura</a>
+               <a href="sign-in.html">Sign in to kawura</a>
             </button>
             <button class="btn btn-sign-up" type="button">
-               <a href="#">Sign up on kawura</a>
+               <a href="sign-up.html">Sign up on kawura</a>
             </button>
          </div>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
