--- a/sign-in.html
+++ b/sign-in.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,12 +18,8 @@
          </div>
          <div class="col-md-1 vertical-line"></div>
          <div class="col-sm-6 col-md-6">
-            <h2 class="form-head">SIGN UP ON KAWURA</h2>
+            <h2 class="form-head">SIGN IN TO KAWURA</h2>
             <form action="post" class="form">
-               <div class="input-icons">
-                  <i class="far fa-user-circle icon"></i>
-                  <input type="text" class="form-control" placeholder="Full Name">
-               </div>
                <div class="input-icons">
                   <i class="far fa-envelope icon"></i>
                   <input type="text" class="form-control" placeholder="Email Address">
@@ -33,10 +28,10 @@
                   <i class="fas fa-lock icon"></i>
                   <input type="password" class="form-control" placeholder="Password">
                </div>
-               <button type="submit" class="btn btn-signup">Sign Up</button>
+               <button type="submit" class="btn btn-signin">Sign In</button>
             </form>
             <p class="text-center text-account">Already have an account? 
-               <span><a href="#" > Sign-in</a> </span></p>
+               <span><a href="#" > Sign-Up</a> </span></p>
             <div class="text-option ">
                <div class="right-line"></div>
                <p class="text-center"> OR </p>
