--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
             <div class="navbar-icon"></div>
             <div class="navbar-icon"></div>
             <div class="navbar-icon"></div>
-            </span>
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                  <a href="#">Sign in to kawura</a>
+                  <a href="sign-in.html">Sign in to kawura</a>
               </li>
               <li class="nav-item">
-                  <a href="#">Sign up on kawura</a>
+                  <a href="sign-up.html">Sign up on kawura</a>
               </li>   
             </ul>
           </div>  
@@ -45,7 +44,7 @@
             <div class="col-sm-6 col-md-6 py-3 row-space">
               <h2 class="py-3 header-text">
                <span class="header-color">Deliver</span> and <span class="header-color">Receive</span> Live <br>
-               Classes at ease
+               Classes at ease. {{message}}
               </h2>
               <p class="header-sub-text">
                Kawura connects value-driven instructors and individuals 
@@ -199,8 +198,7 @@
     
 
    <!-- javascript base -->
-   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>   
+   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+   <script src="./Assets/script/customVue.js"></script>
 </body>
 </html>
