--- a/sign-in.html
+++ b/sign-in.html
@@ -11,27 +11,28 @@
    <script src="https://kit.fontawesome.com/9df45a9d7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-   <div class="section-sign-up">
-      <div class="row sign-up">
+   <div class="section-sign-in">
+      <div class="row sign-in">
          <div class="col-sm-6 col-md-5">
-            <img src="./Assets/Images/kawura-logo.png" class="signup-logo" alt="kawura">
+            <img src="./Assets/Images/kawura-logo.png" class="signin-logo" alt="kawura">
          </div>
-         <div class="col-md-1 vertical-line"></div>
+         <div class="col-md-1"></div>
          <div class="col-sm-6 col-md-6">
             <h2 class="form-head">SIGN IN TO KAWURA</h2>
-            <form action="post" class="form">
+            <form action="post" @submit="verifyForm" class="form">
                <div class="input-icons">
                   <i class="far fa-envelope icon"></i>
-                  <input type="text" class="form-control" placeholder="Email Address">
+                  <input type="text" class="form-control" placeholder="Email Address" id="email" v-model="email" id="email">
+                  <p v-for="error in errors">{{error}}</p>
                </div>
-               <div class="input-icons">
+               <div class="input-icons password">
                   <i class="fas fa-lock icon"></i>
                   <input type="password" class="form-control" placeholder="Password">
                </div>
                <button type="submit" class="btn btn-signin">Sign In</button>
             </form>
             <p class="text-center text-account">Already have an account? 
-               <span><a href="#" > Sign-Up</a> </span></p>
+               <span><a href="sign-up.html" > Sign-Up</a> </span></p>
             <div class="text-option ">
                <div class="right-line"></div>
                <p class="text-center"> OR </p>
@@ -51,7 +52,6 @@
    </div>
 
     <!-- javascript base -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- <script src="./Assets/script/customVue.js"></script> -->
 </body>
