--- a/sign-up.html
+++ b/sign-up.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,23 +19,38 @@
          <div class="col-md-1 vertical-line"></div>
          <div class="col-sm-6 col-md-6">
             <h2 class="form-head">SIGN UP ON KAWURA</h2>
-            <form action="post" class="form">
-               <div class="input-icons">
-                  <i class="far fa-user-circle icon"></i>
-                  <input type="text" class="form-control" placeholder="Full Name">
-               </div>
-               <div class="input-icons">
-                  <i class="far fa-envelope icon"></i>
-                  <input type="text" class="form-control" placeholder="Email Address">
-               </div>
-               <div class="input-icons">
-                  <i class="fas fa-lock icon"></i>
-                  <input type="password" class="form-control" placeholder="Password">
-               </div>
-               <button type="submit" class="btn btn-signup">Sign Up</button>
-            </form>
+            <div v-if="!submitted">
+               <form action="post" class="form">
+                  <div class="input-icons">
+                     <i class="far fa-user-circle icon"></i>
+                     <input type="text" class="form-control" placeholder="Full Name" v-model="name"
+                     v-bind:class="{'form-control':false, 'is-invalid' : !validName(name) && emailBlured}"
+                     v-on:blur="emailBlured = true">
+                     <div class="invalid-feedback">Name is required</div>
+                  </div>
+                  <div class="input-icons">
+                     <i class="far fa-envelope icon"></i>
+                     <input type="email"  class="form-control" placeholder="Email Address" v-model="email" 
+                     v-bind:class="{'form-control':true, 'is-invalid' : !validEmail(email) && emailBlured}"
+                     v-on:blur="emailBlured = true">
+                     <div class="invalid-feedback">A valid email is required</div>
+                  </div>
+                  <div class="input-icons password">
+                     <i class="fas fa-lock icon"></i>
+                     <input type="password" class="form-control" placeholder="Password" v-model="password"
+                     v-bind:class="{'form-control':true, 'is-invalid' : !validPassword(password) && emailBlured}"
+                     v-on:blur="emailBlured = true">
+                     <div class="invalid-feedback">Password is required</div>
+                  </div>
+                  <button type="submit" v-on:click.stop.prevent="submit"  class="btn btn-signup">Sign Up</button>
+               </form>
+            </div>
+            <div v-else="submitted" class="alert alert-success" role="alert">
+               <h5>Thank you</h5>
+               <p>Your Registration was a success!</p>
+            </div>
             <p class="text-center text-account">Already have an account? 
-               <span><a href="#" > Sign-in</a> </span></p>
+               <span><a href="sign-in.html" > Sign-in</a> </span></p>
             <div class="text-option ">
                <div class="right-line"></div>
                <p class="text-center"> OR </p>
@@ -56,7 +70,6 @@
    </div>
 
     <!-- javascript base -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+   <script src="./Assets/script/customVue.js"></script>
 </body>
