--- a/coursePage.html
+++ b/coursePage.html
@@ -11,7 +11,7 @@
 </head>
 <body> 
     <div class="container-fluid header">
-       <nav class="navbar custom-nav">
+       <nav class="navbar custom-nav-course">
          <a class="navbar-brand" href="#">
            <img src="./Assets/Images/kawura-white.png" class="course-logo" alt="kawura">
          </a>  
@@ -29,31 +29,34 @@
           </div>
        </header>
     </div>
-    <div class="course-section-one">
-      <div class="title-bar">
-         <div class="bar-content">
-            <a href="#" class="title-link">Webinar</a>
-            <a href="#" class="title-link">Courses</a>
-         </div>
+    <div class="title-bar">
+       <div class="webinar-box">
+         <a href="#" class="title-link">Webinars</a>
+       </div>
+       <div class="webinar-box course-box">
+         <a href="#" class="title-link" style="  color: #1E2B5E;">Courses</a>
       </div>
+    </div>
+    <div class="course-section-one">
       <div class="course-card">
          <div class="row card-section" >
             <div class="col-sm-6 col-md-3">
                <div class="card course">
-                  <div class="card-top"></div>
-                  <div class="card-body">
+                  <div class="card-top-one"></div>
+                  <div class="card-body card-detail">
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
-                     <div class="img-container">
-                       <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                     <div class="tutor-price">
+                        <div class="img-container">
+                           <img src="./Assets/Images/Ellipse 11.png" alt=""> 
+                           <span class="text-name"> jane Doe</span>
+                         </div>
+                         <div class="text"> 
+                            <p class="card-text text-right">NGN 5000</p>
+                         </div>
                      </div>
-                     <div class="text"> 
-                        <p class="card-text text-right">NGN 5000</p>
-                     </div>
-                     <!-- <div class="card-text">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                        Ducimus,molestiae quas accusamus quae explicabo fugiat!
-                     </div> -->
+                     <p class="card-text about-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quas natus dolores ab quaerat id voluptate corrupti.</p>
+                     <a href="#" class="btn btn-primary ">Enroll Now</a>
+                     <a href="#" class="redirect">Learn More</a>
                   </div>
                </div>
              </div>
@@ -64,7 +67,7 @@
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
                      <div class="img-container">
                        <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                       <span class="text-name"> jane Doe</span>
                      </div>
                      <div class="text"> 
                         <p class="card-text text-right">NGN 5000</p>
@@ -79,7 +82,7 @@
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
                      <div class="img-container">
                        <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                       <span class="text-name"> jane Doe</span>
                      </div>
                      <div class="text"> 
                         <p class="card-text text-right">Free</p>
@@ -94,7 +97,7 @@
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
                      <div class="img-container">
                        <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                       <span class="text-name"> jane Doe</span>
                      </div>
                      <div class="text"> 
                         <p class="card-text text-right">Free</p>
@@ -111,7 +114,7 @@
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
                      <div class="img-container">
                        <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                       <span class="text-name"> jane Doe</span>
                      </div>
                      <div class="text"> 
                         <p class="card-text text-right">NGN 5000</p>
@@ -126,7 +129,7 @@
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
                      <div class="img-container">
                        <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                       <span class="text-name"> jane Doe</span>
                      </div>
                      <div class="text"> 
                         <p class="card-text text-right">NGN 5000</p>
@@ -141,7 +144,7 @@
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
                      <div class="img-container">
                        <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                       <span class="text-name"> jane Doe</span>
                      </div>
                      <div class="text"> 
                         <p class="card-text text-right">NGN 5000</p>
@@ -156,7 +159,7 @@
                      <h2 class="card-title text-left"> Introduction to Basic German</h2>
                      <div class="img-container">
                        <img src="./Assets/Images/Ellipse 11.png" alt=""> 
-                       <span> jane Doe</span>
+                       <span class="text-name"> jane Doe</span>
                      </div>
                      <div class="text"> 
                         <p class="card-text text-right">NGN 5000</p>
