--- a/coursepage2.html
+++ b/coursepage2.html
@@ -48,14 +48,14 @@
           </div>  
        </div>
        <div class="outline-container">
-         <div class="row outline-card">
+         <div class="row">
               <div class="col-sm-6 col-md-4 outline text-center enroll-card">
                  <p class="outline-text enroll-color">Enrolled Courses</p>
               </div>
               <div class="col-sm-6 col-md-4 outline text-center">
                  <p class="outline-text">completed courses</p>
               </div>
-              <div class="col-sm-6 col-md-4 outline text-center">
+              <div class="col-sm-6 col-md-4 outline text-center certify-card">
                  <p class="outline-text">Certifications</p>
               </div>
          </div>
