--- a/index.html
+++ b/index.html
@@ -199,6 +199,6 @@
 
    <!-- javascript base -->
    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-   <script src="./Assets/script/customVue.js"></script>
+   <!-- <script src="./Assets/script/customVue.js"></script> -->
 </body>
 </html>
