--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="col-sm-6 col-md-6 py-3 row-space">
               <h2 class="py-3 header-text">
                <span class="header-color">Deliver</span> and <span class="header-color">Receive</span> Live <br>
-               Classes at ease. {{message}}
+               Classes at ease.
               </h2>
               <p class="header-sub-text">
                Kawura connects value-driven instructors and individuals 
