--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
               </p>
               <div class="header-btn">
                   <button class="btn btn-create" type="button">
-                     <a href="#">Create a class</a>
+                     <a href="coursePage2.html">Create a class</a>
                   </button>
                   <button class="btn btn-enroll" type="button">
-                     <a href="#">Enroll for a class</a>
+                     <a href="coursePage.html">Enroll for a class</a>
                   </button>
                </div>
             </div>
