--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </p>
               <div class="header-btn">
                   <button class="btn btn-create" type="button">
-                     <a href="coursePage2.html">Create a class</a>
+                     <a href="coursepage2.html">Create a class</a>
                   </button>
                   <button class="btn btn-enroll" type="button">
                      <a href="coursePage.html">Enroll for a class</a>
