changes in styling

--- a/coursepage2.html
+++ b/coursepage2.html
@@ -67,7 +67,7 @@
                <div class="top">
                      <h2 class="card-title2">Introduction to Basic French</h2>
                   <div class="top-button">
-                     <button class="btn btn-danger">Today</button>
+                     <button class="btn btn-day1">Today</button>
                   </div>
                </div>  
                <p class="card-text about-card2">Lorem ipsum dolor sit 
@@ -86,14 +86,14 @@
                      <a href="#" class="btn btn-primary ">Join Class</a>
                   </div>
                </div>
-               </div>
+            </div>
             </div>
             <div class="col-sm-6 col-md-6">
                <div class="card-body card-content">
                   <div class="top">
                         <h2 class="card-title-day">Introduction to Basic French</h2>
                      <div class="top-button-day">
-                        <button class="btn btn-danger">5days to go</button>
+                        <button class="btn btn-day1">5days to go</button>
                      </div>
                   </div>  
                   <p class="card-text about-card2">Lorem ipsum dolor sit 
@@ -121,7 +121,7 @@
                <div class="top">
                      <h2 class="card-title-change">Introduction to Basic French</h2>
                   <div class="top-button-change">
-                     <button class="btn btn-warning">12th April, 2020</button>
+                     <button class="btn btn-day2">12th April,2020</button>
                   </div>
                </div>  
                <p class="card-text about-card2">Lorem ipsum dolor sit 
@@ -147,7 +147,7 @@
                   <div class="top">
                         <h2 class="card-title-change">Introduction to Basic French</h2>
                      <div class="top-button-change">
-                        <button class="btn btn-warning">12th April,2020</button>
+                        <button class="btn btn-day2">12th April,2020</button>
                      </div>
                   </div>  
                   <p class="card-text about-card2">Lorem ipsum dolor sit 
@@ -175,7 +175,7 @@
                <div class="top">
                      <h2 class="card-title-change">Introduction to Basic French</h2>
                   <div class="top-button-change">
-                     <button class="btn btn-success">25th April,2020</button>
+                     <button class="btn btn-day3">25th April,2020</button>
                   </div>
                </div>  
                <p class="card-text about-card2">Lorem ipsum dolor sit 
@@ -201,7 +201,7 @@
                   <div class="top">
                         <h2 class="card-title-change">Introduction to Basic French</h2>
                      <div class="top-button-change">
-                        <button class="btn btn-success">25th April,2020</button>
+                        <button class="btn btn-day3">25th April,2020</button>
                      </div>
                   </div>  
                   <p class="card-text about-card2">Lorem ipsum dolor sit 
