--- a/sign-in.html
+++ b/sign-in.html
@@ -23,7 +23,7 @@
                <div class="input-icons">
                   <i class="far fa-envelope icon"></i>
                   <input type="text" class="form-control" placeholder="Email Address" id="email" v-model="email" id="email">
-                  <p v-for="error in errors">{{error}}</p>
+                  <!-- <p v-for="error in errors">{{error}}</p> -->
                </div>
                <div class="input-icons password">
                   <i class="fas fa-lock icon"></i>
