--- a/sign-up.html
+++ b/sign-up.html
@@ -45,10 +45,10 @@
                   <button type="submit" v-on:click.stop.prevent="submit"  class="btn btn-signup">Sign Up</button>
                </form>
             </div>
-            <div v-else="submitted" class="alert alert-success" role="alert">
+            <!-- <div v-else="submitted" class="alert alert-success" role="alert">
                <h5>Thank you</h5>
                <p>Your Registration was a success!</p>
-            </div>
+            </div> -->
             <p class="text-center text-account">Already have an account? 
                <span><a href="sign-in.html" > Sign-in</a> </span></p>
             <div class="text-option ">
