--- a/sign-up.html
+++ b/sign-up.html
@@ -23,21 +23,21 @@
                <form action="post" class="form">
                   <div class="input-icons">
                      <i class="far fa-user-circle icon"></i>
-                     <input type="text" class="form-control" placeholder="Full Name" v-model="name"
+                     <input type="text" class="form-control sign-input" placeholder="Full Name" v-model="name"
                      v-bind:class="{'form-control':false, 'is-invalid' : !validName(name) && emailBlured}"
                      v-on:blur="emailBlured = true">
                      <div class="invalid-feedback">Name is required</div>
                   </div>
                   <div class="input-icons">
                      <i class="far fa-envelope icon"></i>
-                     <input type="email"  class="form-control" placeholder="Email Address" v-model="email" 
+                     <input type="email"  class="form-control sign-input" placeholder="Email Address" v-model="email" 
                      v-bind:class="{'form-control':true, 'is-invalid' : !validEmail(email) && emailBlured}"
                      v-on:blur="emailBlured = true">
                      <div class="invalid-feedback">A valid email is required</div>
                   </div>
                   <div class="input-icons password">
                      <i class="fas fa-lock icon"></i>
-                     <input type="password" class="form-control" placeholder="Password" v-model="password"
+                     <input type="password" class="form-control sign-input" placeholder="Password" v-model="password"
                      v-bind:class="{'form-control':true, 'is-invalid' : !validPassword(password) && emailBlured}"
                      v-on:blur="emailBlured = true">
                      <div class="invalid-feedback">Password is required</div>
